--- a/scss/core/_vars.scss
+++ b/scss/core/_vars.scss
@@ -216,6 +216,7 @@ $isCompactLayout: true;
 	--font-emphasis-smallcaps: var(--font-emphasis);
 	--font-emphasis-alt: "Ravenscroft";
 	--font-emphasis-alt-smallcaps: var(--font-emphasis-alt);
+	--font-emphasis-narrow: "Fjalla One";
 
 	--font-mono: "Pragmata", monospace; // monospace;
 	--font-mono-smallcaps: var(--font-mono);
