--- a/templates/components/comp.hbs
+++ b/templates/components/comp.hbs
@@ -90,7 +90,7 @@
 		</div>
 
 		{{#if tooltip}}
-		<div class="tooltip">
+		<div class="tooltip {{tooltipClass}}">
 			{{{tooltip}}}
 		</div>
 		{{/if}}
