--- a/templates/parts/turf-list.hbs
+++ b/templates/parts/turf-list.hbs
@@ -1,46 +1,63 @@
-{{log "ENTERING TURF-LIST" this}}
-<div id="crew-{{actor._id}}-turf-list" class="turf-list {{#if can_edit}}section-editable{{else}}section-non-editable{{/if}}">
+{{!-- {{log "ENTERING TURF-LIST" this}} --}}
+<div id="crew-{{actor._id}}-turf-list"
+	class="turf-list {{#if can_edit}}section-editable{{else}}section-non-editable{{/if}}">
 
-  <div class="turf-row">
+	<div class="turf-row">
 
-    {{#each turfs_data as |turf id|}}
-		{{log turf id}}
-    <div class="turf-block {{~#if turf.value}} turf-selected{{/if}} {{~#if (eq id "8")}}{{#if ../can_edit}} turf-turf{{/if}} turf-lair{{/if}} {{~#if (isTurfBlock turf.name)}} turf-turf{{/if}}">
+		{{#each turfs_data as |turf id|}}
+		{{!-- {{log turf id}} --}}
+		<div class="turf-block {{~#if turf.value}} turf-selected{{/if}} {{~#if (eq id "8")}} turf-lair {{#if ../can_edit}}
+			turf-turf{{/if}}{{/if}} {{~#if (isTurfBlock turf.name)}} turf-turf{{/if}}">
 			{{#each turf.connects as |connects dir|}}
-				{{#unless (isTurfOnEdge id dir)}}
-					<div class="connector {{dir}} {{~#unless connects}} no-connect{{/unless}}" data-index="{{id}}" data-dir="{{dir}}" data-partner="{{getConnectorPartner id dir}}">
-						{{#if ../../can_edit}}
-							{{> "systems/eunos-blades/templates/parts/button-icon.hbs" action="toggle-turf-connection"}}
-						{{/if}}
-					</div>
-				{{/unless}}
+			{{#unless (isTurfOnEdge id dir)}}
+			<div class="connector {{dir}} {{~#unless connects}} no-connect{{/unless}}" data-index="{{id}}" data-dir="{{dir}}"
+				data-partner="{{getConnectorPartner id dir}}">
+				{{#if ../../can_edit}}
+				{{> "systems/eunos-blades/templates/parts/button-icon.hbs" action="toggle-turf-connection"}}
+				{{/if}}
+			</div>
+			{{/unless}}
 			{{/each}}
-			<textarea class="turf-name {{~#if ../can_edit}}{{#unless (eq id "8")}} turf-editable{{/unless}}{{/if}}" name="system.turfs.{{id}}.name" {{#unless ../can_edit}}readonly{{/unless}} {{#if (eq id "8")}}readonly{{/if}}>{{localize turf.name}}</textarea>
+			<textarea class="turf-name {{#unless ../can_edit}}turf-readonly{{/unless}} {{#if (eq id "8"
+				)}}turf-readonly{{/if}} {{~#if ../can_edit}}{{#unless (eq id " 8")}} turf-editable{{/unless}}{{/if}}"
+				name="system.turfs.{{id}}.name" {{#unless ../can_edit}}readonly{{/unless}} {{#if (eq id "8"
+				)}}readonly{{/if}}>{{localize turf.name}}</textarea>
 			{{#if (eq id "8")}}
-			<label>Hunting Grounds:</label>
-			<textarea class="turf-description" name="system.hunting_grounds" spellcheck="false">{{../system.hunting_grounds}}</textarea>
+			<textarea class="turf-description" placeholder="What is it? What makes it unique?" name="system.lair"
+				spellcheck="false">{{../system.lair}}</textarea>
+			<textarea class="turf-district" placeholder="(District)" name="system.turfs.{{id}}.district"
+				spellcheck="false">{{turf.district}}</textarea>
 			{{else}}
 			{{#if (isTurfBlock turf.name)}}
-			<textarea class="turf-description" placeholder="(District & Details)" name="system.turfs.{{id}}.description" spellcheck="false">{{localize turf.description}}</textarea>
+			<textarea class="turf-description" placeholder="What is it? Who held it last?" name="system.turfs.{{id}}.description"
+				spellcheck="false">{{localize turf.description}}</textarea>
+			<textarea class="turf-district" placeholder="(District)" name="system.turfs.{{id}}.district"
+				spellcheck="false">{{turf.district}}</textarea>
 			{{else}}
-			<textarea class="turf-description {{~#if ../can_edit}} turf-editable{{/if}}" name="system.turfs.{{id}}.description" {{#unless ../can_edit}}readonly{{/unless}}>{{localize turf.description}}</textarea>
+			<textarea class="turf-description {{~#if ../can_edit}} turf-editable{{else}} turf-readonly{{/if}}"
+				name="system.turfs.{{id}}.description" {{#unless
+				../can_edit}}readonly{{/unless}}>{{localize turf.description}}</textarea>
 			{{/if}}
 			{{/if}}
 			{{#unless ../can_edit}}
 			{{#noteq id "8"}}
-			<a class="turf-control turf-select" title="Select" data-turf-id="{{id}}" data-turf-status="{{turf.value}}"><i class="fas fa-circle"></i></a>
+			<a class="turf-control turf-select" title="Select" data-turf-id="{{id}}" data-turf-status="{{turf.value}}"><i
+					class="fas fa-circle"></i></a>
 			{{/noteq}}
 			{{/unless}}
-    </div>
-    {{#if (eq id "5")}}
-    </div><div class="turf-row">
-    {{/if}}
-    {{#if (eq id "10")}}
-    </div><div class="turf-row">
-    {{/if}}
-    {{#unless id}}
-    </div><div class="turf-row" style="display: none;">
-    {{/unless}}
-    {{/each}}
-  </div>
+		</div>
+		{{#if (eq id "5")}}
+	</div>
+	<div class="turf-row">
+		{{/if}}
+		{{#if (eq id "10")}}
+	</div>
+	<div class="turf-row">
+		{{/if}}
+		{{#unless id}}
+	</div>
+	<div class="turf-row" style="display: none;">
+		{{/unless}}
+		{{/each}}
+	</div>
 </div>
