--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -2,16 +2,18 @@
 
 	{{!-- Crew Img: Portrait & Background Overlay --}}
 	<img class="sheet-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
-	<div class="sheet-img-bg full-width">
+	{{!-- <div class="sheet-img-bg full-width">
 		<img src="{{actor.img}}" />
-	</div>
+	</div> --}}
 
 	{{!-- Playbook XP --}}
 	{{#if items.playbook}}
-		{{> "systems/eunos-blades/templates/components/comp.hbs"
-			class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
-			dotline=playbookData.dotline
-		}}
+	{{> "systems/eunos-blades/templates/components/comp.hbs"
+	class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
+	dotline=playbookData.dotline
+	tooltip=playbookData.tooltip
+	tooltipClass="tooltip-low tooltip-left tooltip-small"
+	}}
 	{{/if}}
 
 	{{!-- Sheet Container --}}
@@ -21,89 +23,102 @@
 
 			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
 
-			{{> "systems/eunos-blades/templates/components/comp.hbs" items.playbook
-				class="comp-playbook comp-vertical"
-				label="Playbook"
-				cat="Playbook"
-				docType="Item"
-				addButton=true
-				remButton=true
-				id=items.playbook._id
-			}}
-
-			{{> "systems/eunos-blades/templates/components/comp.hbs" items.reputation
-				id=items.reputation.id
-				class="comp-reputation comp-vertical no-img"
-				label="Reputation"
-				cat="Reputation"
-				docType="Item"
-				addButton=true
-				remButton=true
-			}}
-
-			{{> "systems/eunos-blades/templates/components/comp.hbs" items.preferredOp
-				id=items.preferredOp._id
-				class="comp-preferred-op comp-vertical no-img"
-				label="Preferred Op"
-				cat="PreferredOp"
-				docType="Item"
-				addButton=true
-				remButton=true
-			}}
-
-			{{> "systems/eunos-blades/templates/components/comp.hbs" tierData
-				label="Tier"
-				class="comp-tier comp-vertical"
-			}}
-
-			{{> "systems/eunos-blades/templates/components/comp.hbs" coinsData
-				label="Coins"
-				class="comp-coins comp-vertical"
-			}}
-
 			<div class="members comp-horizontal comp">
 				<div class="portrait-container flex-horizontal">
 					{{#each actors.members as |actor|}}
 					{{> "systems/eunos-blades/templates/components/comp.hbs" actor
-						cat="crew-pc"
-						id=actor._id
-						class="comp-vertical portrait-block"
-						remButton=true
+					cat="crew-pc"
+					id=actor._id
+					class="comp-vertical portrait-block"
+					remButton=true
 					}}
 					{{/each}}
 				</div>
 			</div>
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.playbook
+			class="comp-playbook comp-vertical"
+			label="Playbook"
+			cat="Playbook"
+			docType="Item"
+			addButton=true
+			remButton=true
+			id=items.playbook._id
+			}}
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.reputation
+			id=items.reputation.id
+			class="comp-reputation comp-vertical no-img"
+			label="Reputation"
+			cat="Reputation"
+			docType="Item"
+			addButton=true
+			remButton=true
+			}}
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.preferredOp
+			id=items.preferredOp._id
+			class="comp-preferred-op comp-vertical"
+			label="Preferred Op"
+			cat="PreferredOp"
+			docType="Item"
+			addButton=true
+			remButton=true
+			}}
+
+			<div class="comp-hunting-grounds comp-vertical comp">
+				<label class="comp-label shadowed">
+					Hunting Grounds
+				</label>
+				<div class="comp-body">
+					<textarea class="comp-body-text shadowed" placeholder="(Hunting Grounds)" name="system.hunting_grounds"
+				spellcheck="false">{{system.hunting_grounds}}</textarea>
+				</div>
+			</div>
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs" coinsData
+			label="Coins"
+			class="comp-coins comp-vertical"
+			}}
+
 		</section>
 
 		{{!-- Rep/Turf, Heat, Wanted --}}
 		<section class="sheet-mid-bar flex-horizontal full-width">
 
 			{{> "systems/eunos-blades/templates/components/comp.hbs"
-				class="comp-rep comp-horizontal comp-teeth"
-				label=repData.name
-				labelClass="filled-label"
-				dotlines=repData.dotlines
+			class="comp-rep comp-horizontal comp-teeth"
+			label=repData.name
+			labelClass="filled-label"
+			dotlines=repData.dotlines
 			}}
 
-			{{> "systems/eunos-blades/templates/components/comp.hbs" holdData
-				class="comp-hold comp-vertical"
-				label=holdData.name
-				name=holdData.displayVal
-				labelClass="filled-label short-label"
+			<div class="comp-hold comp-vertical comp">
+				<label class="comp-label filled-label short-label">Hold</label>
+				<div class="comp-body">
+					<div class="comp-title shadowed hold-toggle">{{system.hold}}</div>
+				</div>
+			</div>
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs"
+			class="comp-heat comp-horizontal comp-teeth"
+			label=heatData.name
+			labelClass="filled-label"
+			dotline=heatData.dotline
 			}}
 
 			{{> "systems/eunos-blades/templates/components/comp.hbs"
-				class="comp-rep comp-horizontal comp-teeth"
-				label=heatData.name
-				labelClass="filled-label"
-				dotline=heatData.dotline
+			class="comp-wanted comp-vertical comp-teeth"
+			label=wantedData.name
+			labelClass="filled-label"
+			dotline=wantedData.dotline
 			}}
 
 			{{> "systems/eunos-blades/templates/components/comp.hbs"
-				class="comp-trauma comp-vertical comp-teeth"
-				label=wantedData.name
-				labelClass="filled-label"
-				dotline=wantedData.dotline
+			class="comp-tier comp-vertical comp-teeth"
+			label="TIER"
+			labelClass="filled-label"
+			dotline=tierData.dotline
 			}}
 
 		</section>
@@ -116,11 +131,12 @@
 				<a class="tab-selector" data-tab="claims">Claims</a>
 				<a class="tab-selector" data-tab="upgrades">Upgrades</a>
 				<a class="tab-selector" data-tab="abilities">Abilities</a>
+				<a class="tab-selector" data-tab="contacts">Contacts</a>
 				<a class="tab-selector" data-tab="cohorts">Cohorts</a>
 				<a class="tab-selector" data-tab="player-notes">Notes</a>
 				{{#if isGM}}
-					<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
-					<a class="tab-selector" data-tab="all-items">All Items</a>
+				<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
+				<a class="tab-selector" data-tab="all-items">All Items</a>
 				{{/if}}
 			</nav>
 
@@ -128,14 +144,12 @@
 			<div class="tab claims" data-tab="claims">
 				{{#if items.playbook}}
 				{{> "systems/eunos-blades/templates/parts/turf-list.hbs"
-					actor=actor
-					turfs_data=items.playbook.system.turfs
-					can_edit=false
+				actor=actor
+				turfs_data=items.playbook.system.turfs
+				can_edit=false
 				}}
 				{{/if}}
 			</div>
-
-			{{!-- Crew Upgrades --}}
 
 			{{!-- Crew Upgrades --}}
 			<div class="tab upgrades flex-vertical" data-tab="upgrades">
@@ -150,11 +164,11 @@
 
 				{{#each items.upgrades}}
 				{{> "systems/eunos-blades/templates/components/comp.hbs" this
-					class="comp-desc-trait comp-horizontal full-width"
-					docType="Item"
-					cat="Upgrade"
-					remButton=true
-					id=id
+				class="comp-desc-trait comp-horizontal full-width"
+				docType="Item"
+				cat="Upgrade"
+				remButton=true
+				id=id
 				}}
 				{{/each}}
 			</div>
@@ -173,13 +187,37 @@
 
 				{{#each items.abilities}}
 				{{> "systems/eunos-blades/templates/components/comp.hbs" this
-					class="comp-desc-trait comp-horizontal full-width"
-					docType="Item"
-					cat="Ability"
-					remButton=true
-					id=id
+				class="comp-desc-trait comp-horizontal full-width"
+				docType="Item"
+				cat="Ability"
+				remButton=true
+				id=id
 				}}
 				{{/each}}
+			</div>
+
+			{{!-- Contacts --}}
+			<div class="tab contacts flex-vertical" data-tab="contacts">
+				<label class="comp tab-label" data-comp-cat="Contact" data-comp-type="Actor">
+					{{#if items.playbook}}
+					<a class="comp-control comp-button comp-add">
+						<i class="fas fa-plus-square"></i>
+					</a>
+					{{/if}}
+					<span class="tab-title">Contacts</span>
+				</label>
+
+				<div class="comp comp-horizontal portrait-container actors-container">
+					{{#each actors.contacts as |actor|}}
+					{{> "systems/eunos-blades/templates/components/comp.hbs" actor
+					class="comp-vertical portrait-block"
+					docType="Actor"
+					cat="Contact"
+					remButton=true
+					id=id
+					}}
+					{{/each}}
+				</div>
 			</div>
 
 			{{!-- Cohorts --}}
@@ -192,7 +230,7 @@
 				</label>
 
 				{{#each items.cohorts}}
-					{{> "systems/eunos-blades/templates/parts/cohort-block.hbs" }}
+				{{> "systems/eunos-blades/templates/parts/cohort-block.hbs" }}
 				{{/each}}
 			</div>
 
@@ -212,36 +250,36 @@
 			{{!-- GM-ONLY TABS --}}
 			{{#if isGM}}
 
-				{{!-- GM Notes Tab --}}
-				<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
-					<label class="tab-label">
-						<span class="tab-title">GM Notes</span>
-					</label>
-					{{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
-				</div>
+			{{!-- GM Notes Tab --}}
+			<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
+				<label class="tab-label">
+					<span class="tab-title">GM Notes</span>
+				</label>
+				{{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
+			</div>
 
-				{{!-- Active Effects Tab --}}
-				<div class="tab effects flex-vertical" data-tab="effects">
-					<label class="tab-label">
-						<span class="tab-title">{{localize "BITD.Effects"}}</span>
-					</label>
-					{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
-				</div>
+			{{!-- Active Effects Tab --}}
+			<div class="tab effects flex-vertical" data-tab="effects">
+				<label class="tab-label">
+					<span class="tab-title">{{localize "BITD.Effects"}}</span>
+				</label>
+				{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+			</div>
 
-				{{!-- Full Item List Tab --}}
-				<div class="tab all-items flex-vertical" data-tab="all-items">
-					<label class="comp tab-label">
-						<span class="tab-title">{{localize "BITD.AllItems"}}</span>
-					</label>
+			{{!-- Full Item List Tab --}}
+			<div class="tab all-items flex-vertical" data-tab="all-items">
+				<label class="comp tab-label">
+					<span class="tab-title">{{localize "BITD.AllItems"}}</span>
+				</label>
 
-					{{#each actor.items as |item id|}}
-					{{> "systems/eunos-blades/templates/components/comp.hbs" item
-						id=id
-						class="comp-desc-trait comp-horizontal full-width"
-						remFullButton=true
-					}}
-					{{/each}}
-				</div>
+				{{#each actor.items as |item id|}}
+				{{> "systems/eunos-blades/templates/components/comp.hbs" item
+				id=id
+				class="comp-desc-trait comp-horizontal full-width"
+				remFullButton=true
+				}}
+				{{/each}}
+			</div>
 
 			{{/if}}
 
